[package]
name = "fedimint-aead"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "aead utilities on top of ring "
license = "MIT"

[lib]
name = "fedimint_aead"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.65"
argon2 = { version = "0.5.0", features = ["password-hash", "alloc"] }
ring = { git = "https://github.com/fedibtc/ring", branch = "main" }
hex = "0.4.3"
rand = "0.8"
